--- a/front-web/cadastro-veiculos-front/angular.json
+++ b/front-web/cadastro-veiculos-front/angular.json
@@ -20,6 +20,9 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": [
+              "rxjs-compat"
+            ],
             "outputPath": "dist/cadastro-veiculos-front",
             "index": "src/index.html",
             "main": "src/main.ts",
