--- a/front-web/cadastro-veiculos-front/package.json
+++ b/front-web/cadastro-veiculos-front/package.json
@@ -12,26 +12,18 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "~0.1102.1",
     "@angular/animations": "~11.2.1",
     "@angular/cdk": "^12.0.1",
+    "@angular/cli": "~11.2.1",
     "@angular/common": "~11.2.1",
     "@angular/compiler": "~11.2.1",
+    "@angular/compiler-cli": "~11.2.1",
     "@angular/core": "~11.2.1",
     "@angular/forms": "~11.2.1",
     "@angular/platform-browser": "~11.2.1",
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
-    "ng2-currency-mask": "^11.0.0",
-    "ng2-toasty": "^4.0.3",
-    "primeicons": "^4.1.0",
-    "primeng": "11.4.2",
-    "rxjs": "~6.6.3",
-    "rxjs-compat": "^6.6.3",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.3",
-    "@angular-devkit/build-angular": "~0.1102.1",
-    "@angular/cli": "~11.2.1",
-    "@angular/compiler-cli": "~11.2.1",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
@@ -42,10 +34,18 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "ng2-currency-mask": "^11.0.0",
+    "ngx-toastr": "^14.1.0",
+    "primeicons": "^4.1.0",
+    "primeng": "11.4.2",
     "protractor": "~7.0.0",
+    "rxjs": "~6.6.3",
+    "rxjs-compat": "^6.6.3",
     "ts-node": "~8.3.0",
+    "tslib": "^2.0.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.2"
+    "typescript": "~4.1.2",
+    "zone.js": "~0.11.3"
   },
   "devDependencies": {},
   "engines": {
